# script_kit

./: .gitignore  Dockerfile  INTEGRATION.md  README.md  docker-compose.yml  push.bat  pyproject.toml  requirements.txt  run_local.bat  run_migrate.bat  开发计划.md  当前工作状态.md  脚本管理与执行标准件-需求说明书.md
demo_project/: manage.py
demo_project/demo_project/: settings.py  urls.py
script_kit/: __init__.py  admin.py  api.py  apps.py  conf.py  models.py  runner.py  scan.py  setup_project.py  urls.py  views.py
script_kit/management/commands/: init_scripts.py
script_kit/migrations/: 0001_initial.py
script_kit/scripts/: __init__.py
script_kit/scripts/data_processing/: csv_summary.py  merge_json.py
script_kit/scripts/file_operations/: file_info.py  list_files.py
script_kit/templates/script_kit/: base.html  index.html  manage.html
